--- a/Projects/Server/Server.csproj
+++ b/Projects/Server/Server.csproj
@@ -10,6 +10,8 @@
         <PublishDir>..\..\Distribution</PublishDir>
         <OutDir>..\..\Distribution</OutDir>
         <Version>0.0.0</Version>
+        <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+        <CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>
     </PropertyGroup>
     <Target Name="CleanPub" AfterTargets="Clean">
         <Message Text="Removing distribution files..." />
@@ -26,9 +28,21 @@
         <Delete Files="..\..\Distribution\$(AssemblyName).pdb" ContinueOnError="true" />
         <Delete Files="..\..\Distribution\$(AssemblyName).runtimeconfig.dev.json" ContinueOnError="true" />
         <Delete Files="..\..\Distribution\$(AssemblyName).runtimeconfig.json" ContinueOnError="true" />
+        <RemoveDir Directories="Generated" ContinueOnError="true" />
+    </Target>
+    <Target Name="CleanGenerated" BeforeTargets="BeforeBuild">
+        <RemoveDir Directories="Generated" ContinueOnError="true" />
     </Target>
     <ItemGroup>
+        <None Include="$(GeneratedSourcePath)\**" />
+        <PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="3.9.0">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Microsoft.Toolkit.HighPerformance" Version="7.0.0-preview5" />
         <PackageReference Include="Zlib.Bindings" Version="1.4.0" />
+    </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\EntitySerializationGenerator\EntitySerializationGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
     </ItemGroup>
 </Project>
