--- a/Projects/Server/Server.csproj
+++ b/Projects/Server/Server.csproj
@@ -39,7 +39,11 @@
         <PackageReference Include="Zlib.Bindings" Version="1.4.0" />
     </ItemGroup>
     <ItemGroup>
-        <ProjectReference Include="..\SerializationGenerator\SerializationGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+        <ProjectReference Include="..\SerializationGenerator\SerializationGenerator.csproj">
+            <OutputItemType>Analyzer</OutputItemType>
+            <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+            <PrivateAssets>all</PrivateAssets>
+        </ProjectReference>
     </ItemGroup>
     <Target Name="AddSourceGeneratedFiles" AfterTargets="CoreCompile">
         <ItemGroup>
