--- a/Projects/UOContent/UOContent.csproj
+++ b/Projects/UOContent/UOContent.csproj
@@ -30,6 +30,7 @@
         </ProjectReference>
         <PackageReference Include="MailKit" Version="2.10.1" />
         <PackageReference Include="Microsoft.Toolkit.HighPerformance" Version="7.0.0-preview5" />
+        <PackageReference Include="OneOf" Version="3.0.178" />
         <PackageReference Include="Zlib.Bindings" Version="1.4.0" />
         <PackageReference Include="Argon2.Bindings" Version="1.8.0" />
     </ItemGroup>
